# strive-test

./: .gitignore  Makefile  README.md  pyproject.toml
.meta/: Dockerfile  gitlab.yml
src/quiz/: __init__.py  cases.py  domain.py  interface.py  repository.py
src/quiz/interface/: admin.py  main.py
src/templates/: question.j2
tests/: test_interface.py
